# pkgsrc-wip

./: .DESCR.swp  .gitignore  :  MESSAGE  Makefile  Makefile$  PLIST  TODO  buildlink3.mk  distinfo  import-package.sh  jdk1x_java-vm.mk.diff  oshavercd.mk
0ad/: COMMIT_MSG  DESCR  Makefile  Makefile.common  PLIST  TODO  distinfo  options.mk
0ad-data/: COMMIT_MSG  DESCR  Makefile  PLIST  distinfo
2048-c/: DESCR  Makefile  PLIST  distinfo
2048-cli/: Makefile  PLIST  distinfo
2bwm/: DESCR  Makefile  PLIST  distinfo
389-ds-base/: DESCR  MESSAGE  Makefile  PLIST  TODO  distinfo  options.mk
3ddesktop/: Makefile  PLIST  distinfo
3dsconv/: DESCR  Makefile  PLIST  distinfo
4stAttack/: Makefile  PLIST  distinfo
4ti2/: DESCR  Makefile  PLIST  distinfo
64tass/: Makefile  PLIST  distinfo
6tunnel/: COMMIT_MSG  Makefile  distinfo
7-zip-zstd/: DESCR  Makefile  TODO  distinfo
7kaa/: DESCR  Makefile  PLIST  distinfo
7kaa-music/: DESCR  Makefile  PLIST  distinfo
7z-bin/: DESCR  Makefile  PLIST  TODO  distinfo
8bc/: COMMIT_MSG  DESCR  LICENSE.pdp8pal  Makefile  PLIST  distinfo
8cc/: Makefile  TODO  distinfo
8cc-git/: DESCR  Makefile
9rc/: DESCR  Makefile  PLIST  TODO  distinfo
ARC/: DESCR  Makefile  PLIST  distinfo
Aseprite/: DESCR  Makefile  PLIST  TODO  distinfo
Bear/: DESCR  Makefile  PLIST  TODO  cargo-depends.mk  distinfo
BitchX/: DESCR  Makefile  PLIST  TODO  distinfo
Box2D/: DESCR  Makefile  PLIST  distinfo
CRCpp/: DESCR  Makefile  PLIST  buildlink3.mk  distinfo
CRWInfo/: DESCR  Makefile  PLIST  distinfo
Cg-compiler/: Makefile  PLIST  PLIST.common  PLIST.linux-i386  PLIST.linux-x86_64  buildlink3.mk  distinfo
Chinput/: Makefile  PLIST  TODO  distinfo
CodeWhale/: COMMIT_MSG  DESCR  Makefile  PLIST  cargo-depends.mk  distinfo
Coin/: COMMIT_MSG  Makefile  PLIST  TODO  buildlink2.mk  buildlink3.mk  distinfo
CuraEngine/: DESCR  Makefile  PLIST  buildlink3.mk  distinfo
DWB/: DESCR  MESSAGE  Makefile  PLIST  distinfo
DarwinStreamingServer/: DESCR  MESSAGE  Makefile  PLIST  TODO  distinfo
DeepSeek-TUI/: COMMIT_MSG  DESCR  Makefile  PLIST  cargo-depends.mk  distinfo
ETL/: Makefile  PLIST  buildlink3.mk  distinfo
Eina/: Makefile  PLIST  TODO  distinfo
FLIF/: DESCR  Makefile  PLIST  TODO  distinfo
FLIF-git/: DESCR  Makefile  PLIST  distinfo
FileManip/: Makefile  PLIST  buildlink3.mk  distinfo
FlightCrew/: Makefile  PLIST  distinfo
FontManager/: Makefile  distinfo
FreeBASIC/: DESCR  Makefile  PLIST  distinfo
GNUMail-pgp/: DESCR  Makefile  PLIST  TODO  distinfo
GSAlign/: DESCR  Makefile  PLIST  distinfo
GSCommander/: DESCR  Makefile  PLIST  distinfo
GenericRepeatFinder/: DESCR  Makefile  PLIST  distinfo
GeoIP/: DESCR  Makefile  PLIST  buildlink3.mk  distinfo
Geomyidae-git/: Makefile  PLIST
GoogleEarth/: DESCR  MESSAGE  Makefile  PLIST  TODO  distinfo
Guitar/: DESCR  (+4 more)
alex/patches/: patch-aa  patch-alex.cabal
cabal2pkg/patches/: patch-cabal2pkg.cabal  patch-src_System_OsString_Posix_Instances.hs
chromium-browser/patches/: patch-base_BUILD.gn  patch-base_debug_debugger__posix.cc  patch-base_message__loop_message__loop.cc  patch-base_process_process__handle__netbsd.cc  patch-base_process_process__iterator.h  patch-base_process_process__iterator__netbsd.cc  patch-base_process_process__metrics__netbsd.cc  patch-base_process_process__metrics__posix.cc  patch-base_process_process__posix.cc  patch-base_sys__info__netbsd.cc  patch-base_third__party_libevent_event-config.h  patch-base_third__party_libevent_netbsd_config.h  patch-base_third__party_libevent_netbsd_event-config.h  patch-base_threading_platform__thread__netbsd.cc  patch-base_trace__event_malloc__dump__provider.cc  patch-base_trace__event_memory__dump__manager.cc  patch-base_trace__event_process__memory__dump.cc  patch-build_config_BUILDCONFIG.gn  patch-build_config_compiler_BUILD.gn  patch-build_toolchain_netbsd_BUILD.gn  patch-chrome_common_extensions_docs_examples_api_nativeMessaging_host_install__host.sh  patch-chrome_common_extensions_docs_examples_api_nativeMessaging_host_uninstall__host.sh  patch-third__party_icu_android_patch__locale.sh  patch-third__party_icu_source_configure  patch-third__party_protobuf_post__process__dist.sh  patch-third__party_xdg-utils_scripts_xdg-terminal  patch-third__party_xdg-utils_scripts_xdg-terminal.in  patch-tools_battor__agent_BUILD.gn  patch-tools_gn_bootstrap_bootstrap.py  patch-tools_gn_setup.cc  patch-tools_gn_variables.cc  patch-v8_tools_run-llprof.sh
chromium-new/patches/: patch-BUILD.gn  patch-apps_ui_views_app__window__frame__view.cc  patch-ash_display_mirror__window__controller.cc  patch-ash_shell.cc  patch-base_BUILD.gn  patch-base_allocator_BUILD.gn  patch-base_allocator_allocator__shim__default__dispatch__to__glibc.cc  patch-base_allocator_allocator__shim__override__libc__symbols.h  patch-base_allocator_allocator__shim__unittest.cc  patch-base_base.gyp  patch-base_base.gypi  patch-base_base__paths__posix.cc  patch-base_debug_debugger__posix.cc  patch-base_debug_proc__maps__linux.cc  patch-base_debug_stack__trace__posix.cc  patch-base_debug_thread__heap__usage__tracker.cc  patch-base_files_file__path__unittest.cc  patch-base_files_file__path__watcher__kqueue.cc  patch-base_files_file__path__watcher__kqueue.h  patch-base_files_file__util.h  patch-base_i18n_icu__util.cc  patch-base_i18n_icu__util.h  patch-base_linux__util.cc  patch-base_native__library__posix.cc  patch-base_posix_unix__domain__socket__linux.cc  patch-base_posix_unix__domain__socket__linux__unittest.cc  patch-base_process_internal__linux.h  patch-base_process_launch.cc  patch-base_process_launch.h  patch-base_process_launch__posix.cc  patch-base_process_memory.cc  patch-base_process_memory.h  patch-base_process_memory__stubs.cc  patch-base_process_memory__unittest.cc  patch-base_process_process__handle__freebsd.cc  patch-base_process_process__handle__netbsd.cc  patch-base_process_process__info__linux.cc  patch-base_process_process__iterator.h  patch-base_process_process__iterator__freebsd.cc  patch-base_process_process__iterator__netbsd.cc  (+623 more)
(+111872 files in other folders)
