$NetBSD$

--- build/config/compiler/BUILD.gn.orig	2016-08-05 17:13:38.000000000 +0000
+++ build/config/compiler/BUILD.gn
@@ -437,8 +437,8 @@ config("compiler") {
   # TODO(pcc): Make this conditional on is_official_build rather than on gn
   # flags for specific features.
   if (!is_debug && (allow_posix_link_time_opt || is_cfi) && !is_nacl) {
-    cflags += [ "-flto" ]
-    ldflags += [ "-flto" ]
+#    cflags += [ "-flto" ]
+#    ldflags += [ "-flto" ]
 
     # Apply a lower LTO optimization level as the default is too slow.
     if (is_linux) {
