$NetBSD$

--- build/toolchain/netbsd/BUILD.gn.orig	2016-08-05 22:49:56.586392139 +0000
+++ build/toolchain/netbsd/BUILD.gn
@@ -0,0 +1,116 @@
+# Copyright 2013 The Chromium Authors. All rights reserved.
+# Use of this source code is governed by a BSD-style license that can be
+# found in the LICENSE file.
+
+import("//build/config/sysroot.gni")
+import("//build/toolchain/gcc_toolchain.gni")
+
+clang_toolchain("clang_arm") {
+  toolchain_cpu = "arm"
+  toolchain_os = "netbsd"
+  toolprefix = "arm-netbsd-gnueabihf-"
+}
+
+clang_toolchain("clang_arm64") {
+  toolchain_cpu = "arm64"
+  toolchain_os = "netbsd"
+  toolprefix = "aarch64-netbsd-gnu-"
+}
+
+gcc_toolchain("arm") {
+  toolprefix = "arm-netbsd-gnueabihf-"
+
+  cc = "${toolprefix}gcc"
+  cxx = "${toolprefix}g++"
+
+  ar = "${toolprefix}ar"
+  ld = cxx
+  readelf = "${toolprefix}readelf"
+  nm = "${toolprefix}nm"
+
+  toolchain_cpu = "arm"
+  toolchain_os = "netbsd"
+  is_clang = false
+}
+
+clang_toolchain("clang_x86") {
+  toolchain_cpu = "x86"
+  toolchain_os = "netbsd"
+}
+
+clang_toolchain("clang_x86_v8_arm") {
+  toolchain_cpu = "x86"
+  v8_toolchain_cpu = "arm"
+  toolchain_os = "netbsd"
+}
+
+clang_toolchain("clang_x86_v8_mipsel") {
+  toolchain_cpu = "x86"
+  v8_toolchain_cpu = "mipsel"
+  toolchain_os = "netbsd"
+}
+
+gcc_toolchain("x86") {
+  cc = "gcc"
+  cxx = "g++"
+
+  readelf = "readelf"
+  nm = "nm"
+  ar = "ar"
+  ld = cxx
+
+  toolchain_cpu = "x86"
+  toolchain_os = "netbsd"
+  is_clang = false
+}
+
+clang_toolchain("clang_x64") {
+  toolchain_cpu = "x64"
+  toolchain_os = "netbsd"
+}
+
+clang_toolchain("clang_x64_v8_arm64") {
+  toolchain_cpu = "x64"
+  v8_toolchain_cpu = "arm64"
+  toolchain_os = "netbsd"
+}
+
+clang_toolchain("clang_x64_v8_mips64el") {
+  toolchain_cpu = "x64"
+  v8_toolchain_cpu = "mips64el"
+  toolchain_os = "netbsd"
+}
+
+gcc_toolchain("x64") {
+  cc = "gcc"
+  cxx = "g++"
+
+  readelf = "readelf"
+  nm = "nm"
+  ar = "ar"
+  ld = cxx
+
+  toolchain_cpu = "x64"
+  toolchain_os = "netbsd"
+  is_clang = false
+}
+
+clang_toolchain("clang_mipsel") {
+  toolchain_cpu = "mipsel"
+  toolchain_os = "netbsd"
+}
+
+gcc_toolchain("mipsel") {
+  cc = "mipsel-netbsd-gnu-gcc"
+  cxx = "mipsel-netbsd-gnu-g++"
+  ar = "mipsel-netbsd-gnu-ar"
+  ld = cxx
+  readelf = "mipsel-netbsd-gnu-readelf"
+  nm = "mipsel-netbsd-gnu-nm"
+
+  toolchain_cpu = "mipsel"
+  toolchain_os = "netbsd"
+  is_clang = false
+  cc_wrapper = ""
+  use_goma = false
+}
