$NetBSD$

--- tools/battor_agent/BUILD.gn.orig	2016-08-05 17:36:02.000000000 +0000
+++ tools/battor_agent/BUILD.gn
@@ -5,7 +5,7 @@
 import("//testing/test.gni")
 
 # Works only on desktop platforms.
-assert(is_win || is_linux || is_mac)
+assert(is_win || is_linux || is_mac || host_os == "netbsd")
 
 executable("battor_agent") {
   sources = [
