$NetBSD$

--- base/allocator/BUILD.gn.orig	2016-11-10 20:02:09.000000000 +0000
+++ base/allocator/BUILD.gn
@@ -330,6 +330,9 @@ if (use_experimental_allocator_shim) {
       ]
     } else if (is_linux && use_allocator == "none") {
       sources += [ "allocator_shim_default_dispatch_to_glibc.cc" ]
+    } else if (is_bsd && use_allocator == "none") {
+      # TODO move the code to allocator_shim_default_dispatch_to_libc.cc"
+      sources += [ "allocator_shim_default_dispatch_to_glibc.cc" ]
     } else if (is_android && use_allocator == "none") {
       sources += [
         "allocator_shim_default_dispatch_to_linker_wrapped_symbols.cc",
