$NetBSD$

--- build/config/BUILDCONFIG.gn.orig	2016-11-10 20:02:09.000000000 +0000
+++ build/config/BUILDCONFIG.gn
@@ -134,12 +134,13 @@ declare_args() {
   is_debug = !is_official_build
 
   # Whether we're a traditional desktop unix.
-  is_desktop_linux = current_os == "linux"
+  is_desktop_linux = current_os == "linux" || current_os == "bsd" || current_os == "netbsd"
 
   # Set to true when compiling with the Clang compiler. Typically this is used
   # to configure warnings.
   is_clang = current_os == "mac" || current_os == "ios" ||
-             current_os == "linux" || current_os == "chromeos"
+             current_os == "linux" || current_os == "chromeos" ||
+             current_os == "bsd"
 
   # Allows the path to a custom target toolchain to be injected as a single
   # argument, and set as the default toolchain.
@@ -183,8 +184,8 @@ if (host_toolchain == "") {
   # TODO(dpranke): Add some sort of assert here that verifies that
   # no toolchain omitted host_toolchain from its toolchain_args().
 
-  if (host_os == "linux") {
-    if (target_os != "linux") {
+  if (host_os == "linux" || host_os == "freebsd" || host_os == "netbsd" || host_os == "openbsd") {
+    if (target_os != "linux" && target_os != "freebsd" && target_os != "netbsd" && target_os != "openbsd") {
       # TODO(dpranke) - is_clang normally applies only to the target
       # build, and there is no way to indicate that you want to override
       # it for both the target build *and* the host build. Do we need to
@@ -220,7 +221,7 @@ if (target_os == "android") {
   } else {
     _default_toolchain = "//build/toolchain/android:$target_cpu"
   }
-} else if (target_os == "chromeos" || target_os == "linux") {
+} else if (target_os == "chromeos" || target_os == "linux" || target_os == "freebsd" || target_os == "netbsd" || target_os == "openbsd") {
   # See comments in build/toolchain/cros/BUILD.gn about board compiles.
   if (is_clang) {
     _default_toolchain = "//build/toolchain/linux:clang_$target_cpu"
@@ -283,6 +284,7 @@ if (current_os == "win" || current_os ==
   is_nacl = false
   is_posix = false
   is_win = true
+  is_bsd = false
 } else if (current_os == "mac") {
   is_android = false
   is_chromeos = false
@@ -292,6 +294,7 @@ if (current_os == "win" || current_os ==
   is_nacl = false
   is_posix = true
   is_win = false
+  is_bsd = false
 } else if (current_os == "android") {
   is_android = true
   is_chromeos = false
@@ -301,6 +304,7 @@ if (current_os == "win" || current_os ==
   is_nacl = false
   is_posix = true
   is_win = false
+  is_bsd = false
 } else if (current_os == "chromeos") {
   is_android = false
   is_chromeos = true
@@ -310,6 +314,7 @@ if (current_os == "win" || current_os ==
   is_nacl = false
   is_posix = true
   is_win = false
+  is_bsd = false
 } else if (current_os == "nacl") {
   # current_os == "nacl" will be passed by the nacl toolchain definition.
   # It is not set by default or on the command line. We treat is as a
@@ -322,6 +327,7 @@ if (current_os == "win" || current_os ==
   is_nacl = true
   is_posix = true
   is_win = false
+  is_bsd = false
 } else if (current_os == "ios") {
   is_android = false
   is_chromeos = false
@@ -331,6 +337,7 @@ if (current_os == "win" || current_os ==
   is_nacl = false
   is_posix = true
   is_win = false
+  is_bsd = false
 } else if (current_os == "linux") {
   is_android = false
   is_chromeos = false
@@ -340,8 +347,47 @@ if (current_os == "win" || current_os ==
   is_nacl = false
   is_posix = true
   is_win = false
+  is_bsd = false
+} else if (current_os == "freebsd") {
+  is_android = false
+  is_chromeos = false
+  is_ios = false
+  is_linux = false
+  is_bsd = true
+  is_mac = false
+  is_nacl = false
+  is_posix = true
+  is_win = false
+  is_freebsd = true
+  is_netbsd = false
+  is_openbsd = false
+} else if (current_os == "netbsd") {
+  is_android = false
+  is_chromeos = false
+  is_ios = false
+  is_linux = false
+  is_bsd = true
+  is_mac = false
+  is_nacl = false
+  is_posix = true
+  is_win = false
+  is_freebsd = false
+  is_netbsd = true
+  is_openbsd = false
+} else if (current_os == "openbsd") {
+  is_android = false
+  is_chromeos = false
+  is_ios = false
+  is_linux = false
+  is_bsd = true
+  is_mac = false
+  is_nacl = false
+  is_posix = true
+  is_win = false
+  is_freebsd = false
+  is_netbsd = false
+  is_openbsd = true
 }
-
 # =============================================================================
 # SOURCES FILTERS
 # =============================================================================
@@ -410,7 +456,7 @@ if (!is_ios) {
 if (!is_mac && !is_ios) {
   sources_assignment_filter += [ "*.mm" ]
 }
-if (!is_linux) {
+if (!is_linux && !is_bsd) {
   sources_assignment_filter += [
     "*_linux.h",
     "*_linux.cc",
