$NetBSD$

--- build/config/clang/BUILD.gn.orig	2016-11-10 20:02:09.000000000 +0000
+++ build/config/clang/BUILD.gn
@@ -20,7 +20,7 @@ config("find_bad_constructs") {
         rebase_path("${clang_base_path}/lib/libFindBadConstructs.dylib",
                     root_build_dir),
       ]
-    } else if (is_linux || is_android) {
+    } else if (is_linux || is_bsd || is_android) {
       cflags += [
         "-Xclang",
         "-load",
@@ -49,7 +49,7 @@ config("find_bad_constructs") {
       "enforce-in-pdf",
     ]
 
-    if ((is_linux || is_android) && !is_chromecast) {
+    if ((is_linux || is_bsd || is_android) && !is_chromecast) {
       cflags += [
         "-Xclang",
         "-plugin-arg-find-bad-constructs",
