$NetBSD$

--- build/config/sanitizers/BUILD.gn.orig	2016-11-10 20:02:09.000000000 +0000
+++ build/config/sanitizers/BUILD.gn
@@ -364,7 +364,7 @@ config("lsan_flags") {
 
 config("msan_flags") {
   if (is_msan) {
-    assert(is_linux, "msan only supported on linux x86_64")
+    assert(is_linux || is_bsd, "msan only supported on linux x86_64")
     msan_blacklist_path =
         rebase_path("//tools/msan/blacklist.txt", root_build_dir)
     cflags = [
@@ -377,7 +377,7 @@ config("msan_flags") {
 
 config("tsan_flags") {
   if (is_tsan) {
-    assert(is_linux, "tsan only supported on linux x86_64")
+    assert(is_linux || is_bsd, "tsan only supported on linux x86_64")
     tsan_blacklist_path =
         rebase_path("//tools/memory/tsan_v2/ignores.txt", root_build_dir)
     cflags = [
