$NetBSD$

--- build/config/ui.gni.orig	2016-11-10 20:02:09.000000000 +0000
+++ build/config/ui.gni
@@ -31,7 +31,7 @@ declare_args() {
 
   # Indicates if Aura is enabled. Aura is a low-level windowing library, sort
   # of a replacement for GDI or GTK.
-  use_aura = is_win || is_linux
+  use_aura = is_win || is_linux || is_bsd
 
   # True means the UI is built using the "views" framework.
   toolkit_views =
@@ -47,7 +47,7 @@ declare_args() {
   use_xkbcommon = false
 
   # Whether we should use glib, a low level C utility library.
-  use_glib = is_linux
+  use_glib = is_linux || is_bsd
 
   # Indicates if Wayland display server support is enabled.
   enable_wayland_server = is_chromeos
@@ -65,19 +65,19 @@ declare_args() {
 
 # Use GPU accelerated cross process image transport by default on linux builds
 # with the Aura window manager.
-ui_compositor_image_transport = use_aura && is_linux
+ui_compositor_image_transport = use_aura && (is_linux || is_bsd)
 
 use_default_render_theme = use_aura && !is_android
 
 # Indicates if the UI toolkit depends on X11.
-use_x11 = is_linux && !use_ozone
+use_x11 = (is_linux || is_bsd) && !use_ozone
 
 # Turn off glib if Ozone is enabled.
 if (use_ozone) {
   use_glib = false
 }
 
-if (is_linux && !use_ozone) {
+if ((is_linux || is_bsd) && !use_ozone) {
   use_cairo = true
   use_pango = true
 } else {
