$NetBSD$

--- build/secondary/third_party/nss/BUILD.gn.orig	2016-11-10 20:02:09.000000000 +0000
+++ build/secondary/third_party/nss/BUILD.gn
@@ -4,7 +4,7 @@
 
 import("//build/config/linux/pkg_config.gni")
 
-if (is_linux) {
+if (is_linux || is_bsd) {
   # This is a dependency on NSS with no libssl. On Linux we use a built-in SSL
   # library but the system NSS libraries. Non-Linux platforms using NSS use the
   # hermetic one in //third_party/nss.
