$NetBSD$

--- build/toolchain/gcc_toolchain.gni.orig	2016-11-10 20:02:09.000000000 +0000
+++ build/toolchain/gcc_toolchain.gni
@@ -10,6 +10,11 @@ import("//build/toolchain/cc_wrapper.gni
 import("//build/toolchain/goma.gni")
 import("//build/toolchain/toolchain.gni")
 
+declare_args() {
+  extra_cppflags = ""
+  extra_ldflags = ""
+}
+
 # This template defines a toolchain for something that works like gcc
 # (including clang).
 #
@@ -453,14 +458,25 @@ template("clang_toolchain") {
   }
 
   gcc_toolchain(target_name) {
-    prefix = rebase_path("$clang_base_path/bin", root_build_dir)
-    cc = "$prefix/clang"
-    cxx = "$prefix/clang++"
-    ld = cxx
-
-    readelf = "${toolprefix}readelf"
-    ar = "${toolprefix}ar"
-    nm = "${toolprefix}nm"
+    if (is_bsd) {
+      cc = "@PREFIX@/bin/clang"
+      #assert(cc != "", "CC env must me set with >= clang")
+      cxx = "@PREFIX@/bin/clang++"
+      #assert(cxx != "", "CXX env must me set with >= clang++")
+      ld = cxx
+      readelf = "readelf"
+      ar = "${toolprefix}llvm-ar"
+      nm = "${toolprefix}llvm-nm"
+    } else {
+      prefix = rebase_path("$clang_base_path/bin", root_build_dir)
+      cc = "$prefix/clang"
+      cxx = "$prefix/clang++"
+      ld = cxx
+
+      readelf = "${toolprefix}readelf"
+      ar = "${toolprefix}ar"
+      nm = "${toolprefix}nm"
+    }
 
     forward_variables_from(invoker, [ "strip" ])
 
