$NetBSD$

--- chrome/BUILD.gn.orig	2016-11-10 20:02:09.000000000 +0000
+++ chrome/BUILD.gn
@@ -122,7 +122,7 @@ if (!is_android && !is_mac) {
     data = [
       "$root_out_dir/resources.pak",
     ]
-    if (is_linux || is_win) {
+    if (is_linux || is_bsd || is_win) {
       data += [
         "$root_out_dir/chrome_100_percent.pak",
         "$root_out_dir/locales/en-US.pak",
@@ -199,7 +199,7 @@ if (!is_android && !is_mac) {
       sources += [ "app/chrome_exe_main_aura.cc" ]
     }
 
-    if (is_linux) {
+    if (is_linux || is_bsd) {
       sources += [
         "app/chrome_dll_resource.h",
         "app/chrome_main.cc",
@@ -1670,7 +1670,7 @@ if (is_android) {
   }
 }
 
-if (is_linux) {
+if (is_linux || is_bsd) {
   action("manpage") {
     if (is_chrome_branded) {
       name = "Google Chrome"
