$NetBSD$

--- chrome/browser/BUILD.gn.orig	2017-02-02 02:02:48.000000000 +0000
+++ chrome/browser/BUILD.gn
@@ -2142,7 +2142,7 @@ split_static_library("browser") {
     deps += [ "//device/udev_linux" ]
   }
 
-  if (is_linux && !is_chromeos) {
+  if ((is_linux || is_bsd) && !is_chromeos) {
     deps += [ "//third_party/speech-dispatcher" ]
   }
 
@@ -3507,7 +3507,7 @@ split_static_library("browser") {
     }
   }
 
-  if (is_linux) {
+  if (is_linux || is_bsd) {
     if (use_aura) {
       deps += [ "//build/linux:fontconfig" ]
       if (use_dbus) {
