$NetBSD$

--- chrome/browser/resources/safe_browsing/BUILD.gn.orig	2016-11-10 20:02:11.000000000 +0000
+++ chrome/browser/resources/safe_browsing/BUILD.gn
@@ -29,6 +29,8 @@ action("make_file_types_protobuf") {
     target_arch = "mac"
   } else if (is_linux) {
     target_arch = "linux"
+  } else if (is_bsd) {
+    target_arch = "bsd"
   } else {
     # This will cause the script to fail.
     target_arch = "unknown_target_arch"
