$NetBSD$

--- chrome/browser/ui/libgtk2ui/BUILD.gn.orig	2016-11-10 20:02:11.000000000 +0000
+++ chrome/browser/ui/libgtk2ui/BUILD.gn
@@ -2,7 +2,7 @@
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
 
-assert(is_linux, "This file should only be referenced on Linux")
+assert(is_linux || is_bsd, "This file should only be referenced on Linux")
 
 import("//build/config/features.gni")
 import("//build/config/ui.gni")
